<resources>
    <string name="app_name">Ontimetravel</string>
    <string name="profilemain">Bus Search</string>
    <string name="list">Bus List (Time 24 Hour Format)</string>
    <string name="name">name</string>
    <string name="city">city</string>
    <string name="fetch_match_data">Fetch Match Data</string>
    <string name="call_for_booking">Call for Booking</string>
    <string name="search_here">Search Here</string>
    <string name="about_toast">about</string>
    <string name="logout">Logout</string>
    <string name="About">About</string>
    <string name="enter_phone_number">Enter Phone Number 10 Digits</string>
    <string name="login_or_signup">Login or SignUp</string>
    <string name="send_otp">Send OTP</string>
    <string name="send_otp1">Enter OTP</string>
    <string name="please_wait">Please Wait! while we are verifying your mobile number</string>
    <string name="enter_otp">(Enter the OTP in case if we fail to detect the SMS Automatically)</string>
    <string name="sign_in">Sign In</string>
    <string name="Destination" />
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="departure_date">Departure Date</string>
    <string name="search">SEARCH</string>
    <string name="or_click_here"><![CDATA[or CLICK HERE>]]></string>
    <string name="or_click_here1">Follow us on: Facebook</string>
    <string name="feedback">Do you want to share your feedback? Go to our website and share your feedback.</string>
    <string name="Not_Available">Sorry! No Buses are available in this route.Please go back and search again</string>
    <string name="register_now">Register Now</string>
    <string name="do_you">Do you want be our partner? Then register your bus</string>
    <string name="share_your_play_store_review">Share Your Play Store Review</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="share_your_feedback">Write your Comment</string>
    <string name="send_your_feedback">Send your Feedback</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="progress_detail" />
</resources>