<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ProfileActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <AutoCompleteTextView
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:completionThreshold="1"
            android:gravity="center"
            android:hint="@string/from"
            android:paddingStart="10dp"
            android:textSize="20sp"
            tools:ignore="NestedWeights,RtlSymmetry" />


        <ImageView
            android:id="@+id/button_swap"
            android:layout_width="260dp"
            android:layout_height="23dp"
            android:layout_marginTop="21dp"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_swap_horiz_24"
            android:onClick="onSwap"
            tools:ignore="OnClick" />

        <AutoCompleteTextView
            android:id="@+id/etcity"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:completionThreshold="1"
            android:gravity="center"
            android:hint="@string/to"
            android:paddingStart="10dp"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_marginTop="3.5dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/departure_date"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/disable_past_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_marginTop="3.5dp" />


    <Button
        android:id="@+id/btnfetch"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:text="@string/search"
        android:textColor="#ffffff" />



    <LinearLayout
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        >

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#34ab00"
                    android:orientation="horizontal"

                    >
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_marginTop="20sp"
                        android:background="#34ab00"
                        android:layout_height="100dp"
                        android:src="@drawable/p"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="2"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="150dp"
                            android:layout_marginTop="20sp"
                            android:layout_weight="1.4"
                            android:layout_height="5dp"
                            android:background="#34ab00"
                            android:textColor="#fff"
                            android:fontFamily="sans-serif"
                            android:text="@string/do_you"/>

                        <Button
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="30dp"
                            android:layout_weight="0.6"
                            android:layout_width="130dp"
                            android:layout_height="2dp"
                            android:background="#fff"
                            android:onClick="openBrowser"
                            android:tag="https://ontimetravel.in/partner/"
                            tools:ignore="OnClick"
                            android:text="@string/register_now"/>

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/imagefeed"
                    android:layout_width="300dp"
                    android:background="#FFF222"
                    android:layout_height="150dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/feed"
                    />
                <ImageView
                    android:layout_width="300dp"
                    android:background="#fff"
                    android:layout_height="150dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/book"
                    />


            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:text="@string/share_your_play_store_review"
            android:onClick="openBrowser"
            android:tag="https://play.google.com/store/apps/details?id=in.ontimetravel.ontimetravel"
            tools:ignore="OnClick1"
            android:textColor="#ffffff" />

</LinearLayout>
