<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyPhoneActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="113dp"
            android:layout_height="89dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="155dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="143dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/ic_baseline_chat_24" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/relativeLayout"
        android:layout_marginTop="-50dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="313dp"
        android:layout_height="60dp"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="-45dp"
        android:layout_marginEnd="38dp"
        android:text="@string/please_wait"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="20dp"
        android:text="@string/enter_otp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/editTextCode"
        android:paddingLeft="10dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/edit_text_border"
        android:digits="0123456789"
        android:hint="@string/send_otp1"
        android:maxLength="6" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="180dp"
        android:layout_height="61dp"
        android:layout_below="@id/editTextCode"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="116dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_below="@id/buttonSignIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="161dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="157dp" />

</RelativeLayout>