<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:background="@drawable/logo"
                android:scaleType="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="6dp"
                android:text="@string/login_or_signup"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Spinner
                android:id="@+id/spinnerCountries"
                android:layout_width="100dp"
                android:layout_height="59dp"
                android:layout_weight="0.2" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="250dp"
                android:layout_height="59dp"
                android:layout_weight="0.2"
                android:hint="@string/enter_phone_number"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="120dp"
                android:background="@color/colorPrimary"
                android:text="@string/send_otp"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>